examples/mediaconnect/gateway.yaml
apiVersion: mediaconnect.aws.livewyer.io/v1alpha1
kind: Gateway
metadata:
  name: mediaconnect-gateway-a
  labels:
    mediaconnect.aws.livewyer.io/gateway: mediaconnect-gateway-a
spec:
  providerConfigRef:
    name: aws
  parameters:
    region: us-east-1
    egressCidrBlocks:
      - 88.98.197.180/32
    networks:
      - Name: home
        CidrBlock: 88.98.197.180/32
